# ai-engineer-club-nc

./: .gitignore  README.md  assignment19.ipynb  assignment9.py  life-coach-advice.db  main.ipynb  main.py  models.py  openai_ouput_guardrails.py  openai_streamlit_main.py  ouput_guardrails.py  personal_goals.txt  pyproject.toml  requirements.txt
.adk/artifacts/users/user/sessions/16e916d6-c5bb-474e-968a-e80c790e95a8/artifacts/default_id_page_1_image.png/versions/0/: metadata.json
.devcontainer/: devcontainer.json
claim_validator_agent/: app.py
claim_validator_agent/graph/: builder.py  nodes.py  state.py
past_assignments/: assignment18.ipynb  assignment3.ipynb  assignment5.ipynb  assignment7.py  assignment8.py
restaurant_agent/: complaint_agent.py  menu_agent.py  order_agent.py  reservation_agent.py  triage_agent.py
story_book_maker/: agent.py  callback.py  prompt.py  state.py
story_book_maker/sub_agents/asset_generator/: agent.py  prompt.py
story_book_maker/sub_agents/asset_generator/book_generator/: agent.py  prompt.py
story_book_maker/sub_agents/asset_generator/book_generator/illustrator/: agent.py  prompt.py  tools.py
story_book_maker/sub_agents/asset_generator/book_generator/script_writer/: agent.py  prompt.py
story_book_maker/sub_agents/asset_generator/story_writer/: agent.py  prompt.py
story_book_maker/sub_agents/illustrator/: agent.py  tools.py
story_book_maker/sub_agents/story_planner/: agent.py  prompt.py
story_book_maker/sub_agents/story_writer/: agent.py
(+49 files in other folders)
